--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/meet-app-192.png" />
     <!--
       <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
