renamed serviceWorkerRegistration.js to service-worker.js; added loading spinner

--- a/public/google3053860e0281a240.html
+++ b/public/google3053860e0281a240.html
@@ -1,1 +1,11 @@
-google-site-verification: google3053860e0281a240.html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    google-site-verification: google3053860e0281a240.html
+  </body>
+</html>
